--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "json-stringify-safe": "^5.0.1",
     "nanoid": "^3.1.22",
     "serialize-error": "^8.1.0",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0",
     "zod": "^3.23.8"
@@ -33,6 +34,7 @@
     "@types/express": "^4.17.21",
     "@types/json-stringify-safe": "^5.0.3",
     "@types/node": "^20.14.9",
+    "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
