--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "nodemon",
     "xxx": "ts-node src/test.ts",
     "build": "rimraf dist && webpack",
-    "start": "node dist/main.js"
+    "start": "node dist/main.js",
+    "swagger:gen": "npx ts-node ./src/libs/swagger-autogen.ts"
   },
   "keywords": [],
   "dependencies": {
@@ -23,10 +24,10 @@
     "json-stringify-safe": "^5.0.1",
     "nanoid": "^3.1.22",
     "serialize-error": "^8.1.0",
-    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
     "@types/cls-hooked": "^4.3.8",
@@ -34,11 +35,11 @@
     "@types/express": "^4.17.21",
     "@types/json-stringify-safe": "^5.0.3",
     "@types/node": "^20.14.9",
-    "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
+    "swagger-autogen": "^2.23.7",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
