--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,21 +2,28 @@
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
     "noImplicitAny": true,
-    "target": "ES5",
-    "lib": ["es6"],
+    "target": "ES2020", // Updated target for better compatibility
+    "module": "CommonJS", // Explicitly set to CommonJS
+    "lib": ["es2020"], // Match lib to target
     "strict": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true, // Often helpful with esModuleInterop
     "resolveJsonModule": true,
     "noUnusedLocals": true,
     "removeComments": true,
     "sourceMap": true,
     "outDir": "dist",
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true, // Add this if you encounter issues with type definitions in node_modules
-    "verbatimModuleSyntax": false // If you decide to use the new module syntax handling
+    "skipLibCheck": true,
+    "verbatimModuleSyntax": false,
+    "baseUrl": ".", // Added baseUrl
+    "paths": {
+      // Ensure paths are relative to baseUrl
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.json"],
   "exclude": ["node_modules/**/*", ".vscode/**/*"],
   "ts-node": {
     "require": ["tsconfig-paths/register"]
