--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cls-hooked": "^4.2.2",
     "compression": "^1.7.4",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
     "helmet": "^7.1.0",
