feat: implement creator discovery service with Ylytic API integration and update related routes and validation

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
-GROQ_API_KEY="YOUR GROQ API KEY GOES HERE"
+GROQ_API_KEY="YOUR GROQ_API_KEY GOES HERE"
+YLYTIC_API_KEY="YOUR YLYTIC_API_KEY GOES HERE"
