--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 GROQ_API_KEY="YOUR GROQ_API_KEY GOES HERE"
 YLYTIC_API_KEY="YOUR YLYTIC_API_KEY GOES HERE"
 ELEVENLABS_WEBHOOK_SECRET="YOUR ELEVENLABS WEBHOOK SECRET GOES HERE"
+DATABASE_URL="YOUR DATABASE_URL GOES HERE"
