--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "helmet": "^7.1.0",
     "json-stringify-safe": "^5.0.1",
     "nanoid": "^3.1.22",
+    "postgres": "^3.4.7",
     "serialize-error": "^8.1.0",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0",
