--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   },
   "keywords": [],
   "dependencies": {
+    "axios": "^1.6.7",
+    "cheerio": "^1.0.0-rc.12",
     "cls-hooked": "^4.2.2",
     "compression": "^1.7.4",
     "dotenv": "^16.5.0",
