--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cls-hooked": "^4.2.2",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
@@ -37,6 +38,7 @@
   "devDependencies": {
     "@types/cls-hooked": "^4.3.8",
     "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.18",
     "@types/express": "^4.17.21",
     "@types/json-stringify-safe": "^5.0.3",
     "@types/node": "^20.14.9",
