--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "groq-sdk": "^0.23.0",
     "helmet": "^7.1.0",
     "json-stringify-safe": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^3.1.22",
     "postgres": "^3.4.7",
     "serialize-error": "^8.1.0",
@@ -39,6 +40,7 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.21",
     "@types/json-stringify-safe": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.9",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.4",
