feat(routes): implement campaign-creator linking and update validation schema

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ GROQ_API_KEY="YOUR GROQ_API_KEY GOES HERE"
 YLYTIC_API_KEY="YOUR YLYTIC_API_KEY GOES HERE"
 ELEVENLABS_WEBHOOK_SECRET="YOUR ELEVENLABS WEBHOOK SECRET GOES HERE"
 DATABASE_URL="YOUR DATABASE_URL GOES HERE"
+RESEND_API_KEY="YOUR RESEND_API_KEY GOES HERE"
