--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^3.1.22",
     "postgres": "^3.4.7",
+    "resend": "^4.5.1",
     "serialize-error": "^8.1.0",
     "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.0",
