--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "@types/pdfkit": "^0.13.9",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "cls-hooked": "^4.2.2",
@@ -29,6 +30,7 @@
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^3.1.22",
+    "pdfkit": "^0.17.1",
     "postgres": "^3.4.7",
     "resend": "^4.5.1",
     "serialize-error": "^8.1.0",
