--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ YLYTIC_API_KEY="YOUR YLYTIC_API_KEY GOES HERE"
 ELEVENLABS_WEBHOOK_SECRET="YOUR ELEVENLABS WEBHOOK SECRET GOES HERE"
 DATABASE_URL="YOUR DATABASE_URL GOES HERE"
 RESEND_API_KEY="YOUR RESEND_API_KEY GOES HERE"
+DOCUSEAL_API_KEY="YOUR DOCUSEAL_API_KEY GOES HERE"
+NEGOTIATION_HOST_URL="YOUR NEGOTIATION_HOST_URL GOES HERE"
