--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
     "xxx": "ts-node src/test.ts",
     "build": "rimraf dist && webpack",
     "start": "node dist/main.js",
-    "swagger:gen": "ts-node ./src/libs/swagger-autogen.ts"
+    "swagger:gen": "ts-node ./src/libs/swagger-autogen.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:pdf": "vitest run pdf-generator",
+    "test:docuseal": "vitest run unit/docuseal",
+    "test:unit": "vitest run unit",
+    "test:integration": "vitest run integration"
   },
   "keywords": [],
   "dependencies": {
+    "@docuseal/api": "^1.0.17",
+    "@types/pdfkit": "^0.13.9",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "cls-hooked": "^4.2.2",
@@ -29,6 +39,7 @@
     "json-stringify-safe": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "nanoid": "^3.1.22",
+    "pdfkit": "^0.17.1",
     "postgres": "^3.4.7",
     "resend": "^4.5.1",
     "serialize-error": "^8.1.0",
@@ -38,6 +49,8 @@
     "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/cls-hooked": "^4.3.8",
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.18",
@@ -46,6 +59,9 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.9",
     "@types/swagger-ui-express": "^4.1.8",
+    "@vitest/ui": "^3.2.2",
+    "c8": "^10.1.3",
+    "jsdom": "^26.1.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
     "rimraf": "^5.0.7",
@@ -55,6 +71,7 @@
     "tsconfig-paths": "^4.2.0",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.5.2",
+    "vitest": "^3.2.2",
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4",
     "webpack-node-externals": "^3.0.0"
