--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "build": "rimraf dist && webpack",
     "start": "node dist/main.js",
     "swagger:gen": "ts-node ./src/libs/swagger-autogen.ts",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "check:format": "prettier --check \"src/**/*.ts\"",
+    "check": "pnpm format && pnpm lint:fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
@@ -49,6 +54,8 @@
     "zod-express-middleware": "^1.4.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.28.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@types/cls-hooked": "^4.3.8",
@@ -59,8 +66,13 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.14.9",
     "@types/swagger-ui-express": "^4.1.8",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "@vitest/ui": "^3.2.2",
     "c8": "^10.1.3",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
     "jsdom": "^26.1.0",
     "nodemon": "^3.1.4",
     "prettier": "^3.3.2",
