feat(env): add ElevenLabs bypass secret to environment example feat(api): add chat message and conversation endpoints to API documentation fix(elevenlabs): improve logging for webhook handler

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 GROQ_API_KEY="YOUR GROQ_API_KEY GOES HERE"
 YLYTIC_API_KEY="YOUR YLYTIC_API_KEY GOES HERE"
 IS_YLYTIC_MOCKED="true"  # Set to "true" if you want to mock Ylytic API calls, otherwise set to "false"
+ELEVENLABS_BYPASS_SECRET="TEST_WEBHOOK"
 ELEVENLABS_WEBHOOK_SECRET="YOUR ELEVENLABS WEBHOOK SECRET GOES HERE"
 DATABASE_URL="YOUR DATABASE_URL GOES HERE"
 RESEND_API_KEY="YOUR RESEND_API_KEY GOES HERE"
