feat: enhance campaign-creator functionality with contract management and DocuSeal integration

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,11 @@ ELEVENLABS_BYPASS_SECRET="TEST_WEBHOOK"
 ELEVENLABS_WEBHOOK_SECRET="YOUR ELEVENLABS WEBHOOK SECRET GOES HERE"
 DATABASE_URL="YOUR DATABASE_URL GOES HERE"
 RESEND_API_KEY="YOUR RESEND_API_KEY GOES HERE"
+
 DOCUSEAL_API_KEY="YOUR DOCUSEAL_API_KEY GOES HERE"
+DOCUSEAL_TEMPLATE_ID="YOUR DOCUSEAL_TEMPLATE_ID GOES HERE"
+DOCUSEAL_URL="http://localhost:5000/api"
+
+
+
 NEGOTIATION_HOST_URL="YOUR NEGOTIATION_HOST_URL GOES HERE"
