--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-GROQ_API_KEY="YOUR GROQ_API_KEY GOES HERE"
-YLYTIC_API_KEY="YOUR YLYTIC_API_KEY GOES HERE"
-IS_YLYTIC_MOCKED="true"  # Set to "true" if you want to mock Ylytic API calls, otherwise set to "false"
+DATABASE_URL="YOUR DATABASE_URL GOES HERE"
 ELEVENLABS_BYPASS_SECRET="TEST_WEBHOOK"
 ELEVENLABS_WEBHOOK_SECRET="YOUR ELEVENLABS WEBHOOK SECRET GOES HERE"
-DATABASE_URL="YOUR DATABASE_URL GOES HERE"
+FRONTEND_URL="YOUR FRONTEND_URL GOES HERE"
+GROQ_API_KEY="YOUR GROQ_API_KEY GOES HERE"
+IS_YLYTIC_MOCKED="true"  # Set to "true" if you want to mock Ylytic API calls, otherwise set to "false"
 RESEND_API_KEY="YOUR RESEND_API_KEY GOES HERE"
+YLYTIC_API_KEY="YOUR YLYTIC_API_KEY GOES HERE"
 
 DOCUSEAL_API_KEY="YOUR DOCUSEAL_API_KEY GOES HERE"
 DOCUSEAL_TEMPLATE_ID="YOUR DOCUSEAL_TEMPLATE_ID GOES HERE"
 DOCUSEAL_URL="http://localhost:5000/api"
-
 
 
 NEGOTIATION_HOST_URL="YOUR NEGOTIATION_HOST_URL GOES HERE"
